--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
+
+		<script src="https://kit.fontawesome.com/34d2a269b0.js" crossorigin="anonymous"></script>
 	</head>
 	<body >
 		%svelte.body%
